fix overflow form

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -10,7 +10,7 @@ $border-color: #c6d3f3;
     .form-group {
       margin-bottom: 0;
       margin-right: 0.75rem;
-      flex: 1 0 69.75%;
+      flex: 1 0 65.75%;
     }
 
     .btn {
